--- a/index.html
+++ b/index.html
@@ -8,32 +8,27 @@
     <link rel="stylesheet" href="app.css" />
     <script src="dist/app.js" defer></script>
   </head>
-  
   <body>
 
     <template id="project-input">
-      
       <form>
-
-          <div class="form-control">
-            <label for="title">Title</label>
-            <input type="text" id="title" />
-          </div>
-          <div class="form-control">
-            <label for="description">Description</label>
-            <textarea id="description" rows="3"></textarea>
-          </div>
-          <div class="form-control">
-            <label for="people">People</label>
-            <input type="number" id="people" step="1" min="0" max="10" />
-          </div>
-          <button type="submit">ADD PROJECT</button>
-
+        <div class="form-control">
+          <label for="title">Title</label>
+          <input type="text" id="title" />
+        </div>
+        <div class="form-control">
+          <label for="description">Description</label>
+          <textarea id="description" rows="3"></textarea>
+        </div>
+        <div class="form-control">
+          <label for="people">People</label>
+          <input type="number" id="people" step="1" min="0" max="10" />
+        </div>
+        <button type="submit">ADD PROJECT</button>
       </form>
-
     </template>
 
-    
+
     <template id="single-project">
       <li draggable="true">
         <h2></h2>
@@ -41,7 +36,6 @@
         <p></p>
       </li>
     </template>
- 
 
     <template id="project-list">
       <section class="projects">
@@ -52,10 +46,7 @@
       </section>
     </template>
 
-
-    <div id="app">
-    </div>
-
+    <div id="app"></div>
 
   </body>
 </html>
